fixed css spacing issue with error component

--- a/client/src/styles/components/Register-Page.scss
+++ b/client/src/styles/components/Register-Page.scss
@@ -1,7 +1,8 @@
 .register {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
 	background: linear-gradient(
 			to bottom,
